@@ -75,7 +75,7 @@ namespace MoonTest.Security {
 
 			ClientAccessPolicy.ApplicationUri = new Uri ("http://localhost/");
 
-			Assert.IsTrue (cap.IsAllowed (new Uri ("http://jolt-web01-a03/Resources/test.txt"), null), "");
+			Assert.IsTrue (cap.IsAllowed (new Uri ("http://jolt-web01-a03/Resources/test.txt"), "GET", null), "");
 		}
 
 		[TestMethod]
@@ -100,8 +100,8 @@ namespace MoonTest.Security {
 			ClientAccessPolicy.ApplicationUri = http;
 
 			// this one needs validation
-			Assert.IsFalse (cap.IsAllowed (new Uri ("http://local/file.txt"), null), "");
-			Assert.IsFalse (cap.IsAllowed (new Uri ("http://local/dir/file.txt"), null), "");
+			Assert.IsFalse (cap.IsAllowed (new Uri ("http://local/file.txt"), "GET", null), "");
+			Assert.IsFalse (cap.IsAllowed (new Uri ("http://local/dir/file.txt"), "GET", null), "");
 		}
 
 		[TestMethod]
@@ -126,11 +126,11 @@ namespace MoonTest.Security {
 
 			// and this is not localhost, the url we want to access is not helpful
 			ClientAccessPolicy.ApplicationUri = http;
-			Assert.IsFalse (cap.IsAllowed (new Uri ("http://localhost/some/data/file.txt"), null), "");
+			Assert.IsFalse (cap.IsAllowed (new Uri ("http://localhost/some/data/file.txt"), "GET", null), "");
 
 			Uri localhost = new Uri ("http://localhost/local.xap");
 			ClientAccessPolicy.ApplicationUri = localhost;
-			Assert.IsTrue (cap.IsAllowed (new Uri ("http://localhost/some/data/file.txt"), null), "");
+			Assert.IsTrue (cap.IsAllowed (new Uri ("http://localhost/some/data/file.txt"), "GET", null), "");
 		}
 
 		[TestMethod]
@@ -153,8 +153,8 @@ namespace MoonTest.Security {
 			ClientAccessPolicy cap = GetPolicy (policy);
 
 			ClientAccessPolicy.ApplicationUri = http;
-			Assert.IsTrue (cap.IsAllowed (new Uri ("http://localhost/data/file.txt"), null), "");
-			Assert.IsFalse (cap.IsAllowed (new Uri ("http://localhost/data/./file.txt"), null), "");
+			Assert.IsTrue (cap.IsAllowed (new Uri ("http://localhost/data/file.txt"), "GET", null), "");
+			Assert.IsFalse (cap.IsAllowed (new Uri ("http://localhost/data/./file.txt"), "GET", null), "");
 		}
 
 		[TestMethod]
@@ -177,12 +177,12 @@ namespace MoonTest.Security {
 			ClientAccessPolicy cap = GetPolicy (policy);
 			ClientAccessPolicy.ApplicationUri = http;
 
-			Assert.IsTrue (cap.IsAllowed (http, null), "null");
-			Assert.IsTrue (cap.IsAllowed (http, new string [0]), "none");
-			Assert.IsTrue (cap.IsAllowed (http, "Content-Type"), "Content-Type");
-			Assert.IsTrue (cap.IsAllowed (http, "content-type"), "content-type");
-			Assert.IsTrue (cap.IsAllowed (http, "CONTENT-TYPE"), "CONTENT-TYPE");
-			Assert.IsFalse (cap.IsAllowed (http, "Content-*"), "Content-*");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", null), "null");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", new string [0]), "none");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "Content-Type"), "Content-Type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "content-type"), "content-type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "CONTENT-TYPE"), "CONTENT-TYPE");
+			Assert.IsFalse (cap.IsAllowed (http, "GET", "Content-*"), "Content-*");
 		}
 
 		[TestMethod]
@@ -205,12 +205,12 @@ namespace MoonTest.Security {
 			ClientAccessPolicy.ApplicationUri = http;
 
 			Uri uri = new Uri ("http://localhost/data/file.txt");
-			Assert.IsTrue (cap.IsAllowed (http, null), "null");
-			Assert.IsTrue (cap.IsAllowed (http, new string [0]), "none");
-			Assert.IsTrue (cap.IsAllowed (http, "Content-Type"), "Content-Type");
-			Assert.IsTrue (cap.IsAllowed (http, "content-type"), "content-type");
-			Assert.IsTrue (cap.IsAllowed (http, "CONTENT-TYPE"), "CONTENT-TYPE");
-			Assert.IsTrue (cap.IsAllowed (http, "Content-*"), "Content-*");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", null), "null");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", new string [0]), "none");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "Content-Type"), "Content-Type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "content-type"), "content-type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "CONTENT-TYPE"), "CONTENT-TYPE");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "Content-*"), "Content-*");
 		}
 
 		[TestMethod]
@@ -232,15 +232,15 @@ namespace MoonTest.Security {
 			ClientAccessPolicy cap = GetPolicy (policy);
 			ClientAccessPolicy.ApplicationUri = http;
 
-			Assert.IsTrue (cap.IsAllowed (http, null), "null");
-			Assert.IsTrue (cap.IsAllowed (http, new string [0]), "none");
-			Assert.IsTrue (cap.IsAllowed (http, "Content-Type"), "Content-Type");
-			Assert.IsTrue (cap.IsAllowed (http, "content-type"), "content-type");
-			Assert.IsTrue (cap.IsAllowed (http, "CONTENT-TYPE"), "CONTENT-TYPE");
-			Assert.IsFalse (cap.IsAllowed (http, "Content-*"), "Content-*");
-			Assert.IsTrue (cap.IsAllowed (http, "PrefixLength"), "PrefixLength");
-			Assert.IsTrue (cap.IsAllowed (http, "prefix"), "prefix");
-			Assert.IsTrue (cap.IsAllowed (http, "PREFIX"), "PREFIX");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", null), "null");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", new string [0]), "none");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "Content-Type"), "Content-Type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "content-type"), "content-type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "CONTENT-TYPE"), "CONTENT-TYPE");
+			Assert.IsFalse (cap.IsAllowed (http, "GET", "Content-*"), "Content-*");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "PrefixLength"), "PrefixLength");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "prefix"), "prefix");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "PREFIX"), "PREFIX");
 		}
 
 		[TestMethod]
@@ -262,16 +262,16 @@ namespace MoonTest.Security {
 			ClientAccessPolicy cap = GetPolicy (policy);
 			ClientAccessPolicy.ApplicationUri = http;
 
-			Assert.IsTrue (cap.IsAllowed (http, null), "null");
-			Assert.IsTrue (cap.IsAllowed (http, new string [0]), "none");
-			Assert.IsTrue (cap.IsAllowed (http, "Content-Type"), "Content-Type");
-			Assert.IsTrue (cap.IsAllowed (http, "content-type"), "content-type");
-			Assert.IsTrue (cap.IsAllowed (http, "CONTENT-TYPE"), "CONTENT-TYPE");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", null), "null");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", new string [0]), "none");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "Content-Type"), "Content-Type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "content-type"), "content-type");
+			Assert.IsTrue (cap.IsAllowed (http, "GET", "CONTENT-TYPE"), "CONTENT-TYPE");
 			
-			Assert.IsFalse (cap.IsAllowed (http, "Content-*"), "Content-*");
-			Assert.IsFalse (cap.IsAllowed (http, "LengthSuffix"), "LengthSuffix");
-			Assert.IsFalse (cap.IsAllowed (http, "suffix"), "suffix");
-			Assert.IsFalse (cap.IsAllowed (http, "SUFFIX"), "SUFFIX");
+			Assert.IsFalse (cap.IsAllowed (http, "GET", "Content-*"), "Content-*");
+			Assert.IsFalse (cap.IsAllowed (http, "GET", "LengthSuffix"), "LengthSuffix");
+			Assert.IsFalse (cap.IsAllowed (http, "GET", "suffix"), "suffix");
+			Assert.IsFalse (cap.IsAllowed (http, "GET", "SUFFIX"), "SUFFIX");
 		}
 
 		[TestMethod]
@@ -293,8 +293,8 @@ namespace MoonTest.Security {
 			ClientAccessPolicy cap = GetPolicy (policy);
 			ClientAccessPolicy.ApplicationUri = http;
 
-			Assert.IsTrue (cap.IsAllowed (new Uri ("http://server/data/file.txt"), null), "granted");
-			Assert.IsFalse (cap.IsAllowed (new Uri ("http://server/file.txt"), null), "not-granted-parent");
+			Assert.IsTrue (cap.IsAllowed (new Uri ("http://server/data/file.txt"), "GET", null), "granted");
+			Assert.IsFalse (cap.IsAllowed (new Uri ("http://server/file.txt"), "GET", null), "not-granted-parent");
 		}
 	}
 }
